@@ -1,3 +1,8 @@
+Tue Mar  9 10:25:40 GMT 2004  Colin Watson  <cjwatson@debian.org>
+
+	* zsoelim/zsoelim.l: Define debug for the benefit of pipeline.c.
+	  (open_file): Use pipeline library.
+
 Tue Mar  9 01:54:20 GMT 2004  Colin Watson  <cjwatson@debian.org>
 
 	* zsoelim/zsoelim.l: Long-overdue style cleanup per docs/HACKING. No
